--- a/index.html
+++ b/index.html
@@ -91,8 +91,6 @@
 <script>
 let modo = "texto";
 
-const API_BASE = "https://seu-backend.up.railway.app";
-
 function modoTexto() {
   modo = "texto";
   areaTexto.classList.remove("d-none");
@@ -120,7 +118,7 @@ async function analisarEmail() {
     const texto = emailInput.value;
     if (!texto.trim()) return resetBotao();
 
-    response = await fetch(`${API_BASE}/classify`, {
+    response = await fetch("/classify", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ content: texto })
@@ -132,7 +130,7 @@ async function analisarEmail() {
     const formData = new FormData();
     formData.append("file", file);
 
-    response = await fetch(`${API_BASE}/classify-file`, {
+    response = await fetch("/classify-file", {
       method: "POST",
       body: formData
     });
@@ -163,7 +161,7 @@ function atualizarResultado(data) {
 }
 
 async function carregarHistorico() {
-  const response = await fetch(`${API_BASE}/history`);
+  const response = await fetch("/history");
   const data = await response.json();
 
   historico.innerHTML = "";
@@ -211,7 +209,7 @@ async function enviarFeedback(tipo, motivo = null) {
       ? "Produtivo"
       : "Improdutivo";
 
-  await fetch(`${API_BASE}/feedback`, {
+  await fetch("/feedback", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({
